force-app/main/default/objects/Cognisureapi__mdt/Cognisureapi__mdt.object-meta.xml
<CustomObject>
    <label>Cognisureapi</label>
    <pluralLabel>Cognisureapis</pluralLabel>
</CustomObject>