force-app/main/default/objects/Cognisureapi__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <label>Base URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>