force-app/main/default/objects/Cognisureapi__mdt/fields/Common_JSON_URL__c.field-meta.xml
<CustomField>
    <fullName>Common_JSON_URL__c</fullName>
    <description>used to construct the API endpoint for common json</description>
    <inlineHelpText>used to construct the API endpoint for common json</inlineHelpText>
    <label>Common JSON URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>