force-app/main/default/objects/Cognisureapi__mdt/fields/Email_Message_Query_Plugin__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Query_Plugin__c</fullName>
    <description>Can be used to supply query to process email emails in the batch</description>
    <inlineHelpText>Can be used to supply query to process email emails in the batch</inlineHelpText>
    <label>Email Message Query Plugin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>