force-app/main/default/objects/Cognisureapi__mdt/fields/Field_External_Id_Definition__c.field-meta.xml
<CustomField>
    <fullName>Field_External_Id_Definition__c</fullName>
    <label>Field External Id Definition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>