force-app/main/default/objects/Cognisureapi__mdt/fields/Field_Mapping_Definition__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping_Definition__c</fullName>
    <label>Field Mapping Definition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>