force-app/main/default/objects/Cognisureapi__mdt/fields/File_Content_Plugin__c.field-meta.xml
<CustomField>
    <fullName>File_Content_Plugin__c</fullName>
    <description>Specified what implementation to use for File upload, Attachments or files</description>
    <label>File Content Plugin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>