force-app/main/default/objects/Cognisureapi__mdt/fields/FSC_Object_Response_Map_Definiton__c.field-meta.xml
<CustomField>
    <fullName>FSC_Object_Response_Map_Definiton__c</fullName>
    <label>FSC Object Response Map Definiton</label>
    <length>50</length>
    <type>Text</type>
</CustomField>