force-app/main/default/objects/Cognisureapi__mdt/fields/NamedCredentail__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentail__c</fullName>
    <label>Name Credential</label>
    <length>30</length>
    <type>Text</type>
</CustomField>