force-app/main/default/objects/Cognisureapi__mdt/fields/Objects_To_Create__c.field-meta.xml
<CustomField>
    <fullName>Objects_To_Create__c</fullName>
    <description>CSV list of salesforce object API names to create. This field is used to debug the salesforce record creation one object after another. Run the transaction multiple times by adding objects to this list if you are running into an issue to debug and narrow down the root cause.</description>
    <inlineHelpText>CSV list of salesforce object API names to create</inlineHelpText>
    <label>Objects To Create</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>