force-app/main/default/objects/Cognisureapi__mdt/fields/Record_Field_Setter_Plugin__c.field-meta.xml
<CustomField>
    <fullName>Record_Field_Setter_Plugin__c</fullName>
    <description>Sets the field values using apex class when processing Cognisure response.</description>
    <inlineHelpText>Sets the field values using apex class when processing Cognisure response.</inlineHelpText>
    <label>Record Field Setter Plugin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>