force-app/main/default/objects/Cognisureapi__mdt/fields/Submission_Id__c.field-meta.xml
<CustomField>
    <fullName>Submission_Id__c</fullName>
    <description>For debugging, This is used to load the response data to the specified record Id</description>
    <inlineHelpText>This is used to load the response data to the specified record Id</inlineHelpText>
    <label>Submission Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>