force-app/main/default/objects/Cognisureapi__mdt/fields/Submission_Query_Plugin__c.field-meta.xml
<CustomField>
    <fullName>Submission_Query_Plugin__c</fullName>
    <description>Apex Class used to supply submission query processed in batches</description>
    <label>Submission Query Plugin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>