force-app/main/default/objects/Cognisureapi__mdt/fields/Token_Response_Key__c.field-meta.xml
<CustomField>
    <fullName>Token_Response_Key__c</fullName>
    <description>Identifier the Authentication Token from response</description>
    <label>Token Response Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>