force-app/main/default/objects/Cognisureapi__mdt/fields/Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_URL__c</fullName>
    <description>Token URL to get Authentication Token for Cognisure.</description>
    <label>Token URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>