force-app/main/default/objects/Cognisureapi__mdt/fields/Upload_API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Upload_API_Endpoint__c</fullName>
    <description>Upload API Endpoint URL</description>
    <label>Upload API Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>