force-app/main/default/objects/Cognisureapi__mdt/fields/Upload_API_Plugin__c.field-meta.xml
<CustomField>
    <fullName>Upload_API_Plugin__c</fullName>
    <description>Specified what implementation to use for File upload</description>
    <label>Upload API Plugin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>